--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 
     <body>
         <h1>Spencer Anderson</h1>
+        <h2>Favorite Sport: American Football</h2>
+        <p>I enjoy football because the game is almost always close. There <b>never</b> seems to be a dull moment in the game. There also aren't that many games in a season, making each one feel super <b>special</b>.</p>
     </body>
 </html>
