--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
         <h1>Spencer Anderson</h1>
         <h2>Favorite Sport: American Football</h2>
         <p>I enjoy football because the game is almost always close. There <b>never</b> seems to be a dull moment in the game. There also aren't that many games in a season, making each one feel super <b>special</b>.</p>
+        
+        <hr>
+
+        <h2>Favorite Team and Top 3 Players</h2>
+        <h3>Favorite Team: Kansas City Chiefs</h3>
+        <h3>Top 3 Players:</h3>
+            <ol>
+                <li>Patrick Mahomes</li>
+                <li>Travis Kelce</li>
+                <li>Chris Jones</li>
+            </ol>
     </body>
 </html>
