Added an unordered list for other teams that may be fun to watch

--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
                 <li>Travis Kelce</li>
                 <li>Chris Jones</li>
             </ol>
+        <h3>Other teams that may be fun to watch:</h3>
+            <ul>
+                <li>New York Giants</li>
+                <li>New York Jets</li>
+                <li>New Orleans Saints</li>
+            </ul>
     </body>
 </html>
