Created aboutme page, added an image of favorite book, and added a link to the about me page

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
                 <li>New York Jets</li>
                 <li>New Orleans Saints</li>
             </ul>
+        <a href="aboutme.html">Link to my About Me page.</a>
     </body>
 </html>
