Created a table for recommended countries to visit

--- a/index.html
+++ b/index.html
@@ -26,5 +26,43 @@
                 <li>New Orleans Saints</li>
             </ul>
         <a href="aboutme.html">Link to my About Me page.</a>
+        
+        <hr>
+
+        <h2>Countries that I recommend visiting:</h2>
+        <p>I have never left the United States, but from what I have heard from other people, the following four countries are worth visiting. I hope to visit them someday myself. After I graduate, I hope to take a small trip to Europe to a couple different countires at least.</p>
+        <table>
+
+            <tr>
+            <th>Name</th>
+            <th>Why visit?</th>
+            <th>Number of days recommended</th>
+            </tr>
+
+            <tr>
+                <td>United Kingdom</td>
+                <td> Many sights to see.</td>
+                <td>7 days</td>
+            </tr>
+
+            <tr>
+                <td>Spain</td>
+                <td>Beautiful country.</td>
+                <td>5 days</td>
+            </tr>
+
+            <tr>
+                <td>Italy</td>
+                <td>Historic artworks.</td>
+                <td>5 days</td>
+            </tr>
+
+            <tr>
+                <td>Egpyt</td>
+                <td>The pyramids.</td>
+                <td>2 days</td>
+            </tr>
+
+        </table>
     </body>
 </html>
